# sandbox

./: .gitignore  README.md
angular-forms/: package-lock.json
angular-sandbox/: README.md  package-lock.json  package.json
c-linked-list-bbq/: CMakeLists.txt  main.c
functional-typescript/: lambda.ts  tsconfig.json
gcp-pubsub-rust/: .env  .gitignore  Cargo.toml
gcp-pubsub-rust/scripts/: pubsub-emulator.bat  pubsub-emulator.sh
gcp-pubsub-rust/src/: application.rs  handler.rs  lib.rs  main.rs  message.rs
gcp-pubsub-rust/src/application/: builder.rs  mod.rs
gcp-pubsub-spring/: .gitignore  build.gradle  settings.gradle
geometry-crash/: .env  Cargo.toml
kafka/: docker-compose.yaml
kubernetes-react-spring-boot-postgres/todo-backend-rust/: .gitignore  Cargo.toml
kubernetes-react-spring-boot-postgres/todo-backend-rust/src/: error.rs  lib.rs  main.rs  todo.rs
kubernetes-react-spring-boot-postgres/todo-backend-rust/src/todo/: mod.rs  repository.rs
newman-system-tests/: Dockerfile  pom.xml  (+1 more)
rust-learning/: .gitignore  Cargo.toml
rust-learning/actix/: .env  Cargo.toml
rust-learning/actix-web-error-handling/: Cargo.toml
rust-learning/actix-web-error-handling/src/: app.rs  errors.rs  main.rs
rust-learning/actix/migrations/2021-05-11-173252_initial_version/: down.sql  up.sql
rust-learning/actix/src/: main.rs  schema.rs
rust-learning/actix/src/app/: author.rs  author_book.rs  book.rs  mod.rs
rust-learning/actix/src/db/: mod.rs
rust-learning/actix/src/models/: author.rs  author_book.rs  book.rs  mod.rs
rust-learning/advanced/: Cargo.toml
rust-learning/advanced/src/: main.rs
rust-learning/async-combination/: Cargo.toml
rust-learning/async-combination/src/: main.rs
rust-learning/closures/: Cargo.toml
rust-learning/closures/src/: main.rs
rust-learning/collections/: Cargo.toml
rust-learning/collections/src/: lib.rs  linked_list.rs  main.rs
rust-learning/connection-tracker/: Cargo.toml
rust-learning/connection-tracker/src/: check.rs  lib.rs  log.rs  probe.rs  track.rs
rust-learning/error-handling/: Cargo.toml  hello.txt
rust-learning/error-handling/src/: main.rs
rust-learning/functional/src/: main.rs
rust-learning/hello_macro/: Cargo.toml
rust-learning/hello_macro/hello_macro_derive/src/: lib.rs
rust-learning/hello_webserver/: Cargo.toml
rust-learning/hello_webserver/resources/: 404.html
rust-learning/hello_webserver/src/: event_loop.rs  lib.rs
rust-learning/iterators/: Cargo.toml
rust-learning/iterators/src/: lib.rs  range.rs
rust-learning/lifetimes/: Cargo.toml
rust-learning/lifetimes/src/: main.rs
rust-learning/linked-vec/: Cargo.toml
rust-learning/linked-vec/src/: lib.rs
rust-learning/memoize/: Cargo.toml
rust-learning/memoize/src/: lib.rs
rust-learning/minigrep/: Cargo.toml
rust-learning/minigrep/src/: lib.rs  main.rs
rust-learning/object-oriented/: Cargo.toml
rust-learning/object-oriented/src/: lib.rs  main.rs  user.rs
rust-learning/observer/: Cargo.toml
rust-learning/observer/src/: event_emitter.rs  lib.rs  observable.rs  subscription.rs
rust-learning/observer/src/system/: mod.rs  trade_executor.rs  user.rs
rust-learning/raw_pointers/: Cargo.toml
rust-learning/raw_pointers/src/: lib.rs  ref_cell.rs
rust-learning/restaurant/: Cargo.toml
rust-learning/restaurant/src/: lib.rs
rust-learning/smart-pointers/: Cargo.toml
rust-learning/smart-pointers/src/: lib.rs  main.rs
rust-learning/src/: main.rs
rust-learning/state-machine/src/: lib.rs
rust-learning/testing/: Cargo.toml
rust-learning/testing/src/: lib.rs
rust-learning/threads/: Cargo.toml
rust-learning/threads/src/: main.rs
rust-learning/too-many-lists/: Cargo.toml
rust-learning/too-many-lists/src/: fifth.rs  first.rs  fourth.rs  second.rs  third.rs
rust-learning/touch-rs/: Cargo.toml
rust-learning/traits/: Cargo.toml
rust-learning/traits/src/: lib.rs  main.rs
rust-learning/tree/: Cargo.toml
rust-learning/tree/src/: binary_search_tree.rs  id_based_tree.rs  lib.rs  naive_mutable_tree.rs  non_cyclic_tree.rs
rust-learning/tree/tests/: binary_search_tree.rs  id_based_tree.rs  naive_mutable_tree.rs  non_cyclic_tree.rs
rust-learning/workspaces/add-one/: Cargo.toml
rust-learning/workspaces/add-one/src/: lib.rs
rust-learning/workspaces/adder/: Cargo.toml
rust-learning/workspaces/adder/src/: main.rs
(+214 files in other folders)
