[package]
name = "gcp-pubsub-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.0.14", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
google-cloud = { git = "https://github.com/Tarkin25/google-cloud-rs", branch = "master", features = ["pubsub"] }
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.16.1", features = ["full"] }
