[workspace]
members = [
    "actix",
    "actix-web-error-handling",
    "advanced",
    "async-combination",
    "closures",
    "collections",
    "connection-tracker",
    "error-handling",
    "hello_macro",
    "hello_webserver",
    "iterators",
    "lifetimes",
    "minigrep",
    "memoize",
    "object-oriented",
    "raw_pointers",
    "restaurant",
    "smart-pointers",
    "testing",
    "threads",
    "too-many-lists",
    "touch-rs",
    "traits",
    "tree",
    "observer",
]
