[package]
name = "todo-backend"
version = "0.1.0"
authors = ["Tarkin25 <severin.weigold@edu.tbz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
async-trait = "0.1.50"
dotenv = "0.15.0"
env_logger = "0.8.3"
log = "0.4.14"
serde = "1.0.126"
sqlx = { version = "0.5.5", features = ["postgres", "runtime-actix-native-tls"]}
