[package]
name = "actix-web-error-handling"
version = "0.1.0"
authors = ["Tarkin25 <severin.weigold@edu.tbz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
dotenv = "0.15.0"
env_logger = "0.9.0"
error-chain = "0.12.4"
futures = "0.3.18"
log = "0.4.14"
