[package]
name = "actix"
version = "0.1.0"
authors = ["Tarkin25 <severin.weigold@edu.tbz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
serde = "1.0"
env_logger = "0.8.3"
r2d2 = "0.8"
log = "0.4"
