[package]
name = "async-combination"
version = "0.1.0"
authors = ["Tarkin25 <severin.weigold@edu.tbz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
tokio = { version = "1.14.0", features = ["full"] }
