[package]
name = "connection-tracker"
version = "0.1.0"
authors = ["Tarkin25 <severin.weigold@edu.tbz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
